--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,45 @@
+body {
 
+    margin:0;
+    padding:0;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
+
+a {
+        text-decoration: none;
+        display: inline;
+        color: #000;
+
+}
+
+header {
+    width: 100%;
+    height: 12em;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+
+}
+
+header .header-icons-container {
+    width: 100%;
+    height:4em;
+    display: grid;
+    background-color:#47cfac;
+
+}
+
+header .header-icons-container .icons {
+    width:28em;
+    height:auto;
+    display: flex;
+    justify-items: flex-end;
+    align-items: center;
+    justify-content: space-between;
+    justify-self: end;
+    margin-right: 3.95em; 
+}
 
