--- a/css/main.css
+++ b/css/main.css
@@ -1,92 +1,47 @@
-body {
+/*Imports*/
 
-    margin:0;
-    padding:0;
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-}
+@import url('header.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap');
 
 
-a {
-        text-decoration: none;
-        display: inline;
-        color: #000;
-
-}
-
-header {
-    width: 100%;
-    height: 7.679em;
+.home-main {
     display:grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr; 
+    height:100%;
+    background-image: url('../assests/img/cover.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
-/* Green bar*/
-header .header-icons-container {
-    width: 100%;
-    height:3.8em;
-    display: grid;
-    background-color:#47cfac;
-
+.home-main section {
+    display:grid;
+    grid-column: 2;
+    justify-items: center;
+    height: 10em;
+    margin-top:3.28em;
 }
 
-header .header-icons-container .icons {
-    width:27.99em;
-    height:auto;
-    display: flex;
-    justify-items: flex-end;
-    align-items: center;
-    justify-content: space-between;
-    justify-self: end;
-    margin-right: 3.98em; 
+.home-main-tittle {
+    font-size:2em;
+    font-weight:700;
+    font-family: 'Roboto mono', monospace;
+    letter-spacing: 0.0599em;
+    text-align:center;
+    color:#eee;
 }
 
-header .icons span {
-    color: #fff;
+.home-main-button{
+    display:grid;
+    align-items:center;
+    border-style: none;
+    width: 6.7em;
+    height:3.5em;
+    background:#47cfac ;
 }
 
-/* The white bar */
-nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 3.90em;
-}
 
-nav .nav-logo-container{
-    margin-left:3.4em;
-
-}
-
-nav .nav-logo-container img {
-    width:13.99em; 
-    margin-top:0.82em;
-}
-
-nav .profile-link{
-    display:flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin-right:4.23em;
-}
-
-nav .profile-link a{
-    color: #333;
-    border-bottom: 1px solid #222;
-}
-
-main {
-    /*display: flex;*/
-    width:auto;
-    height:auto;
-
-}
-
-main img {
-
-    position:absolute;
-    top: calc(nav height);   
-    
+.home-main-button a{
+    font-weight: 700;
+    font-size: 1.3em;
 }
