--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 /*Imports*/
 
 @import url('header.css');
+@import url('news.css');
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap');
 
 
