--- a/css/news.css
+++ b/css/news.css
@@ -41,7 +41,12 @@
 }
 
 .blogs-posts-container{
+    text-align:center;
     padding: 0 2.3em 2.1em;
+}
+
+.post-container{
+    text-align:left;
 }
 
 .blogs-posts-container h3 {
