--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,7 @@
 
 .blogpost-img-container {
-    padding: 0 2.8em 2.1em;
+    padding: 0 2.5em 2.1em;
+    max-width: 100%;
 
 }
 
@@ -14,6 +15,31 @@
     text-align:left;
     border-bottom: 1px solid #cdd2da;
 
+}
+
+.container-news p {
+    font-size:1.56em;
+}
+
+.container-news a{
+    display: -ms-flexbox;
+    font-size:inherit;
+    text-decoration: underline solid #47fcac .12em;
+    color:inherit;
+}
+
+.mummy{
+    margin-left:5%;
+}
+
+.container-news h6{
+    display: inline-block;
+    margin-left: 2em;
+    margin-bottom: 2em;
+}
+
+.container-news a:hover{
+    font-style: italic;
 }
 
 .blogpost-main-container article h1 {
@@ -41,7 +67,7 @@
 }
 
 .contact-main-container div img {
-    width:9.13em;
+    width:9em;
 }
 
 .contact-main-container .contact-left, .contact-right {
