--- a/src/video_record.css
+++ b/src/video_record.css
@@ -14,11 +14,7 @@ div.video-record-actions__div
 video.record-screen__video
 {
    margin : auto;
+
+   width  : 640px;
+   height : 480px;
 }
-
-/*input.video-file__input
-{
-
-}*/
-
-
